--- a/src/components/modules/Header/Header.module.css
+++ b/src/components/modules/Header/Header.module.css
@@ -1,3 +1,17 @@
+.header {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+
+  float: left;
+
+  width: 100vw;
+  height: 6.24rem;
+
+  background-color: rgb(255 255 255 / 90%);
+}
+
 .header-container {
   display: flex;
   align-items: center;
@@ -8,54 +22,6 @@
   margin-inline: auto;
 }
 
-.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-
-  float: left;
-
-  width: 100vw;
-  height: 6.24rem;
-}
-
-.list {
-  display: flex;
-
-  height: 100%;
-  margin: 0;
-  padding: 0;
-
-  list-style-type: none;
-  gap: 0 3rem;
-}
-
-.list-item {
-  display: flex;
-  align-items: center;
-  align-self: center;
-  justify-content: center;
-
-  height: 100%;
-  margin: 0;
-
-  line-height: 1.5rem;
-}
-
-.navigation {
-  display: flex;
-  align-items: center;
-  align-self: flex-start;
-  justify-content: flex-start;
-
-  height: inherit;
-  gap: 3rem;
-}
-
-.add-btn {
-  height: 2.75rem;
-}
-
 .actions-wrapper {
   display: flex;
   align-items: center;
@@ -64,9 +30,16 @@
 }
 
 .avatar {
+  width: 2.25rem;
+  height: 2.25rem;
+
   transition: all 0.2s ease;
 }
 
 .avatar:hover {
   border: 0.15rem solid var(--accent-weak);
+}
+
+.add-btn {
+  height: 2.25rem;
 }
