feat: add custom category form

--- a/src/components/modules/Category/Category.module.css
+++ b/src/components/modules/Category/Category.module.css
@@ -7,7 +7,7 @@
   margin-bottom: 0.5rem;
   padding: 0.5rem;
 
-  border-radius: 0.75rem;
+  border-radius: var(--squared);
 
   background-color: var(--faint-weak-down);
   box-shadow: 0 4px 28px -2px rgb(0 0 0 / 8%);
