--- a/src/components/modules/Footer/Footer.module.css
+++ b/src/components/modules/Footer/Footer.module.css
@@ -9,10 +9,9 @@
 
   width: 100vw;
   height: 14rem;
-  padding-right: 0.5rem;
-  padding-left: 0.5rem;
+  padding-inline: 0.5rem;
 
-  border-radius: 40px 40px 0 0;
+  border-radius: 2.5rem 2.5rem 0 0;
   background: var(--complement-background);
 }
 
