--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,6 +24,8 @@
   --success-strong: #34C759;
   --content-width-pc: 1180px;
   --content-width-mobile: 382px;
+  --rounded: 3.5rem;
+  --squared: 0.75rem;
   font-size: 16px;
 }
 
@@ -54,8 +56,7 @@ main {
   margin-top: 6.74rem;
   margin-bottom: 14.5rem;
 
-  padding-right: 0.5rem;
-  padding-left: 0.5rem;
+  padding-inline: 0.5rem;
   margin-inline: auto;
 }
 
