--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,6 +53,7 @@ main {
   width: 100%;
   max-width: var(--content-width-pc);
   height: 100%;
+  min-height: 100%;
   margin-top: 6.74rem;
   margin-bottom: 14.5rem;
 
