--- a/src/components/templates/AdminPages/AddCategoryPage/AddCategoryPage.module.css
+++ b/src/components/templates/AdminPages/AddCategoryPage/AddCategoryPage.module.css
@@ -4,7 +4,7 @@
 }
 
 .title {
-  margin: 0;
+  margin: 0 0 1.25rem;
 }
 
 .form-group {
@@ -21,6 +21,8 @@
 }
 
 .char-count {
+  margin-bottom: 1.25rem;
+
   color: var(--faint-strong);
 }
 
@@ -30,5 +32,5 @@
   justify-content: flex-end;
 
   width: 100%;
-  gap: 0.5rem;
+  gap: 1.25rem;
 }
