--- a/src/components/templates/CommonPages/ProfilePage/ProfilePage.module.css
+++ b/src/components/templates/CommonPages/ProfilePage/ProfilePage.module.css
@@ -2,18 +2,10 @@
   display: grid;
 
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   margin-bottom: 0.5rem;
 
-  background-color: tomato;
   grid-template-columns: 1fr 3fr;
   gap: 1.25rem;
-}
-
-.sidebar {
-  background-color: plum;
-}
-
-.main {
-  background-color: wheat;
 }
