feat: add auto animate

--- a/src/components/templates/AdminPages/UsersPage/UsersPage.module.css
+++ b/src/components/templates/AdminPages/UsersPage/UsersPage.module.css
@@ -10,6 +10,9 @@
 
   width: 100%;
   margin-bottom: 0.5rem;
+  padding: 0;
+
+  list-style: none;
   grid-template-columns: 1fr 1fr;
   gap: 1.25rem;
 }
