--- a/src/components/modules/Registration/RegFormStep2/RegFormStep2.module.css
+++ b/src/components/modules/Registration/RegFormStep2/RegFormStep2.module.css
@@ -35,7 +35,15 @@
 }
 
 .form-description {
-  margin-bottom: 2rem;
+  margin-bottom: 1.25rem;
+}
+
+.label {
+  display: block;
+
+  margin: 0 0 0.5rem 0.5rem;
+
+  color: var(--faint-strong);
 }
 
 .form-title {
