--- a/src/components/modules/Things/Things.module.css
+++ b/src/components/modules/Things/Things.module.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: space-between;
 
   width: 100%;
   height: 100%;
@@ -15,6 +14,7 @@
 
   width: 100%;
   height: 100%;
+  max-height: 5rem;
 }
 
 .title {
@@ -24,6 +24,10 @@
 
   font-size: 1.5rem;
   line-height: 2.25rem;
+}
+
+.placeholder {
+  color: var(--faint-strong);
 }
 
 .things-counter {
@@ -39,6 +43,9 @@
   width: 100%;
   height: 100%;
   margin-bottom: 0.5rem;
+  padding: 0;
+
+  list-style: none;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1.25rem;
 }
