feat: add placeholder text for empty pages

--- a/src/components/templates/AdminPages/CategoriesPage/CategoriesPage.module.css
+++ b/src/components/templates/AdminPages/CategoriesPage/CategoriesPage.module.css
@@ -4,3 +4,12 @@
 
   list-style: none;
 }
+
+.placeholder {
+  width: 100%;
+  margin-top: 3rem;
+
+  text-align: center;
+
+  color: var(--faint-strong);
+}
